--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Rekomendasi Klinik / Rumah Sakit"
+                android:text="Clinic/Hospital Recommendations"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_margin="16dp"/>
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Harga Konsultasi"
+                android:text="Consultation Price"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_marginTop="16dp"
@@ -60,7 +60,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Harga Persalinan"
+                android:text="Maternity Price"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_marginTop="16dp"
@@ -77,7 +77,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Jumlah Layanan"
+                android:text="Number of Services"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_marginTop="16dp"
@@ -94,7 +94,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Fasilitas"
+                android:text="Facilities"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_marginTop="16dp"
@@ -111,7 +111,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Jarak"
+                android:text="Distance"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_marginTop="16dp"
@@ -136,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/round_rect"
                     android:backgroundTint="@color/introPrimary"
-                    android:text="Cari"
+                    android:text="Find"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     app:layout_constraintTop_toTopOf="parent"
