menterjemahkan ke bahasa Inggris

--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -87,7 +87,7 @@
             android:id="@+id/rute"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Rute"
+            android:text="Route"
             android:textColor="@color/black"
             android:textAllCaps="false"
             android:textSize="14dp"
